--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "سامانه-مصوبات-مدرسه-علمیه-امام-رضا-(ع)-2",
+  "name": "سامانه-مصوبات-مدرسه-علمیه-امام-رضا-(ع)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
