--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
-
 [[redirects]]
   from = "/*"
   to = "/index.html"
@@ -7,8 +6,9 @@
 [build]
   publish = "."
 
-[headers]
-  [[headers.values]]
+[[headers]]
+  for = "/*"
+  [headers.values]
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
